<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/sprite"
        android:layout_width="306dp"
        android:layout_height="667dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/spritecan"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timedate"
        app:layout_constraintVertical_bias="0.352"
        app:srcCompat="@drawable/spritecan1" />

    <ImageView
        android:id="@+id/drpepper"
        android:layout_width="491dp"
        android:layout_height="631dp"
        android:layout_marginTop="156dp"
        android:clickable="true"
        android:contentDescription="@string/peppercan"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drpepper" />

    <ImageView
        android:id="@+id/cocacola"
        android:layout_width="324dp"
        android:layout_height="630dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:contentDescription="@string/cokecan"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        app:srcCompat="@drawable/cokecan2" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/lock"
        app:layout_constraintBottom_toTopOf="@+id/cocacola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <TextView
        android:id="@+id/timedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="35dp"
        android:text="@string/_12_00"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <ImageView
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/overlayfortest"
        app:layout_constraintBottom_toBottomOf="@+id/drpepper"
        app:layout_constraintEnd_toEndOf="@+id/drpepper"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>
